# test-exclude-paths-all-ecosystems

./: README.md
.github/: dependabot.yml
.github/workflows/: main.yml
bun/: bunfig.toml  package.json
bun/exclude-me/: package.json
bun/include-me/: package.json
bundler/: Gemfile
bundler/exclude-me/: Gemfile
bundler/include-me/: Gemfile
cargo/: Cargo.toml
cargo/exclude-me/: Cargo.toml
cargo/include-me/: Cargo.toml
legacy/.github/workflows/: legacy-ci.yml
legacy/conda-app/: environment.yml
legacy/dart-app/: pubspec.yaml
legacy/elixir-app/: mix.exs
legacy/elm-app/: elm.json
legacy/go-app/: go.mod
legacy/java-gradle/: build.gradle
legacy/java-maven/: pom.xml
legacy/node-app/: package.json
legacy/php-app/: composer.json
legacy/python-app/: requirements.txt
legacy/ruby-app/: Gemfile
legacy/rust-app/: Cargo.toml
legacy/swift-app/: Package.swift
legacy/terraform-app/: main.tf
main/.github/workflows/: ci.yml
main/conda-app/: environment.yml
main/dart-app/: pubspec.yaml
main/elixir-app/: mix.exs
main/elm-app/: elm.json
main/go-app/: go.mod
main/java-gradle/: build.gradle
main/java-maven/: pom.xml
main/node-app/: package.json
main/php-app/: composer.json
main/python-app/: requirements.txt
main/ruby-app/: Gemfile
main/rust-app/: Cargo.toml
main/swift-app/: Package.swift
main/terraform-app/: main.tf
maven/: pom.xml
maven/exclude-me/: pom.xml
maven/include-me/: pom.xml
pnpm/: .npmrc  package.json  pnpm-workspace.yaml
pnpm/exclude-me/: package.json
pnpm/include-me/: package.json
