[workspace]
members = [
    "include-me",
    "exclude-me"
]
resolver = "2"

[workspace.dependencies]
# Shared workspace dependencies
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21", features = ["macros"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
