[package]
name = "cli-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.7"
walkdir = "2.3"
rayon = "1.6"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.4"
once_cell = "1.16"

[dev-dependencies]
criterion = "0.4"
proptest = "1.0"
tempfile = "3.3"
